Fix some of the errorprone suggestions:   - more correct hash codes   - closing streams properly   - less linked lists   - proper format   - non deprecated new instance   - static classes   - no more double braces initialisations