@@ -19,6 +19,7 @@
  */
 package org.neo4j.kernel.impl.util;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -120,9 +121,9 @@ public class AutoCreatingHashMap<K,V> extends HashMap<K,V>
         {
             try
             {
-                return valueType.newInstance();
+                return valueType.getDeclaredConstructor().newInstance();
             }
-            catch ( InstantiationException | IllegalAccessException e )
+            catch ( InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e )
             {
                 throw new RuntimeException( e );
             }
